--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <iframe
+      src="https://smart-virtual.onrender.com/"
+      width="680"
+      height="480"
+      allowfullscreen
+    ></iframe>
   </body>
 </html>
